--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "test": "vitest --run",
-    "e2e": "playwright test"
+    "e2e": "playwright test",
+    "check:reg": "node scripts/check-reg-symbol.js"
   },
   "devDependencies": {
     "@playwright/test": "^1.43.1",
